# epharma

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  epharma.cpp  epharma.hpp  epharma_test.cpp  products_seed.sql  resources.qrc  seed_transactions.sql  style.qss
.github/workflows/: linux-x86_64.yaml  windows-x86_64.yaml
resources/: style.qss
src/: database.cpp  database.hpp  invoiceswidget.cpp  invoiceswidget.hpp  loginwindow.cpp  loginwindow.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  models.cpp  models.hpp  poswidget.cpp  poswidget.hpp  productswidget.cpp  productswidget.hpp  reportswidget.cpp  reportswidget.hpp  transactionswidget.cpp  transactionswidget.hpp  userswidget.cpp  userswidget.hpp
